# algol-60-webassembly

./: .gitignore  README.md  build-bitcode.sh  build-install-marst.sh  build-ligalgol-wasm.sh  build-wasm.sh  build.sh  index.html  package-lock.json  package.json  primes  primes.c  run.sh  style.css
.devcontainer/: Dockerfile  build.sh  devcontainer.json  fetch-dependencies.sh  libalgol.build.sh  marst.build.sh
alg/: app.alg
algol-wasm/: index.js  index.wasm
app/: app.js  index.pug  style.css  style.scss
c/: extern.c
marst-2.7/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  alglib1.alg  alglib1.c  alglib2.c  alglib3.c  algol.h  configure  configure.ac  macvt.c  marst.c
marst-2.7/doc/: marst.texi
marst-2.7/examples/: euler.txt  manorboy.alg  tennent.alg
marst-2.7/tests/: README  a60mr.djvu  listing.txt  test001.alg  test002.alg  test003.alg  test004.alg  test005.alg  test006.alg  test007.alg  test008.alg  test009.alg  test010.alg  test011.alg  test012.alg  test013.alg  test014.alg  test015.alg  test016.alg  test017.alg  test018.alg  test019.alg  test020.alg  test021.alg  test022.alg  test023.alg  test024.alg  test025.alg  test026.alg  test027.alg  test028.alg  test029.alg  test030.alg  test031.alg  test032.alg  test033.alg  test034.alg  test035.alg  test036.alg  test037.alg  (+93 more)
marst-bin/: marst
scripts/: build.sh  fetch-audio.sh
src/: index.pug  style.scss
